--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "devDependencies": {
         "@babel/core": "7.28.4",
         "@babel/preset-env": "7.28.3",
+        "@fullhuman/postcss-purgecss": "6.0.0",
         "autoprefixer": "10.4.21",
         "babel-loader": "10.0.0",
         "cssnano": "7.1.1",
